AvaTax4ServiceMax/src/objects/AvaTaxCompany__c.object
<CustomObject>
    <description>AvaTaxCompany is where:
   * Avalara Company Code
   * Origin Address 
are stored</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyAddress__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Avalara Company Code</inlineHelpText>
        <label>Company Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>2 or 3 char ISO country code</inlineHelpText>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <inlineHelpText>Zip or Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>State or Province</inlineHelpText>
        <label>Region</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>AvaTaxCompany</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AvaTaxCompany Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaTaxCompanies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>